Remove copyright and build counter from Calc Bowl

--- a/tex/documents/CalculusBowlExpertEdition/CalculusBowlExpertEdition.tex
+++ b/tex/documents/CalculusBowlExpertEdition/CalculusBowlExpertEdition.tex
@@ -1,22 +1,5 @@
 \documentclass{beamer}
 
-\newcounter{compilation}
-\newwrite\writecompilation
-\newread\readcompilation
-\openin\readcompilation=\jobname.vrs
-\ifeof\readcompilation
-  % no file yet
-  \setcounter{compilation}{1}%
-\else
-  \read\readcompilation to \temp
-  \setcounter{compilation}{\temp}%
-  \stepcounter{compilation}%
-\fi
-\closein\readcompilation
-\immediate\openout\writecompilation=\jobname.vrs
-\immediate\write\writecompilation{\thecompilation}
-\immediate\closeout\writecompilation
-
 \everymath{\displaystyle}
 
 \DeclareMathOperator{\arccot}{arccot}
@@ -46,11 +29,7 @@
 \title{Calculus Bowl: Expert Edition}
 \author{Radon Rosborough \\ \hfill \\ \href{https://intuitiveexplanations.com/calculus-bowl/}{https://intuitiveexplanations.com/calculus-bowl/}}
 \date{April 2016}
-\titlepage
-{\linespread{1.5}
-\noindent \Tiny Build \thecompilation
-
-\noindent Copyright \textcopyright{} 2016 by Radon Rosborough. This work is licensed under a \href{http://creativecommons.org/licenses/by-nc-nd/4.0/}{Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License}. \par}
+\maketitle
 \end{frame}
 
 %CB:BEGIN
