Update URLs in document title pages
Closes #2.

--- a/tex/documents/CalculusIntuitiveExplanations/CalculusIntuitiveExplanations.tex
+++ b/tex/documents/CalculusIntuitiveExplanations/CalculusIntuitiveExplanations.tex
@@ -211,7 +211,9 @@
 
 \begin{document}
 
-\titlepage {Calculus: Intuitive Explanations} {intuitive-explanations}
+\titlepage
+{Calculus: Intuitive Explanations}
+{calculus-intuitive-explanations}
 {\textit{Intuitive Explanations} is a collection of clear,
   easy-to-understand, intuitive explanations of many of the more
   complex concepts in calculus. In this document, an ``intuitive''
