--- a/tex/documents/PicardLindelofTheorem/PicardLindelofTheorem.tex
+++ b/tex/documents/PicardLindelofTheorem/PicardLindelofTheorem.tex
@@ -13,7 +13,7 @@
 \titlepage
 {The Existence-Uniqueness Theorem for First-Order Differential
   Equations}
-{existence-uniqueness-theorem}
+{picard-lindelof-theorem}
 {This document is a proof of the existence-uniqueness theorem for
   first-order differential equations, also known as the
   Picard-Lindel\"of or Cauchy-Lipschitz theorem. It was written with
