--- a/tex/documents/ProbabilityDistributionsMeansAndVariances/ProbabilityDistributionsMeansAndVariances.tex
+++ b/tex/documents/ProbabilityDistributionsMeansAndVariances/ProbabilityDistributionsMeansAndVariances.tex
@@ -15,8 +15,8 @@
 \begin{document}
 
 \titlepage
-{Mean and Variance of Selected Probability Distributions}
-{probability-distribution-proofs}
+{Probability Distributions: Means and Variances}
+{probability-distributions-means-and-variances}
 {This document is a collection of derivations for the formulas for the
   means and variances of seven different probability distributions
   commonly encountered in statistics.}
