Fix typo on page 56

--- a/tex/documents/CalculusIntuitiveExplanations/CalculusIntuitiveExplanations.tex
+++ b/tex/documents/CalculusIntuitiveExplanations/CalculusIntuitiveExplanations.tex
@@ -4817,7 +4817,7 @@ formula for the curl:
   + \left(\frac{\partial F_x}{\partial z}
     - \frac{\partial F_z}{\partial x}\right) \jh
   + \left(\frac{\partial F_y}{\partial x}
-    - \frac{\partial F_x}{\partial y}\right).
+    - \frac{\partial F_x}{\partial y}\right) \kh.
 \]
 
 Since the derivations of the other two components are nearly identical
